--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -1,4 +1,7 @@
 .button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   font: inherit;
   padding: 0.5rem 1.5rem;
   border: 1px solid #8b005d;
